--- a/fiado.css
+++ b/fiado.css
@@ -5,18 +5,13 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
+    color: #fff
 }
 
-.header {
-    background-color: rgb(83, 0, 109);
-    color: white;
-    text-align: center;
-    padding: 5px;
-}
+
 
 .login-container {
     background-color: #000000;
-
     border-radius: 15px;
     text-align: center;
 
@@ -25,8 +20,8 @@ body {
 input[type="text"] {
     width: 70%;
     padding: 10px;
-    margin: 10px 0;
-    margin-bottom: 10px;
+    margin: auto;
+    display: block;
     margin-bottom: 10px;
     
 }
@@ -39,22 +34,10 @@ button {
     border-radius: 5px;
     bottom: 20px;
     cursor: pointer;
-    margin: 20px;
+    margin: auto;
+    display: block;
     margin-bottom: 70px;
-}
-
-.logo {
-    max-width: 350px; 
-    display: block;
-    margin: 0 auto; 
-    margin-left: 90px;
-}
-
-.logo2 {
-    max-width: 280px; 
-    display: block;
-    margin: 0 auto; 
-    margin-left: 90px;
+    margin-top: 20px;
 }
 
 .verificar {
